# qt_distributed_team_project

./: .gitignore  README.md
docker_servers/: README.md  docker-compose.yml  docker-compose.yml.save  push_all_images_to_docker_hub.sh
docker_servers/configs/: config_main_server.env  config_mongo_server.env  config_worker_node.env  config_worker_node_control_server.env
docker_servers/db_mongo/.mongodb/mongosh/: 6732500817845b5b9359139d_log  673250085c91d1701059139d_log  67325025f99808a64159139d_log  67325043b159188f6b59139d_log  673250621779351b6859139d_log  67325080e64b4190ce59139d_log  6732509e5ed1b125ca59139d_log  673250bc16dab852b859139d_log  config  mongosh_repl_history
docker_servers/db_sqlite/: readme.txt  users.db
docker_servers/main_server/: Dockerfile  main.py
docker_servers/main_server/tests/: generate_matrix.py  generated_integer_matrix.mtx  generated_integer_matrix2534.mtx  generated_integer_matrix2910.mtx  generated_integer_matrix6364.mtx  generated_integer_matrix650.mtx  generated_integer_matrix7474.mtx  generated_integer_matrix9399.mtx  tests.sh
docker_servers/mongo_app/: README.md  dockerfile  logger.py  main.py  mongo_service.py  requirements.txt
docker_servers/mongo_app/tests/: tests.sh
docker_servers/sqlite_app/: Dockerfile  main.py  readme.md  sql_service.py
docker_servers/sqlite_app/tests/: tests.sh
docker_servers/worker_node/: Dockerfile  main.py  requirements.txt
docker_servers/worker_node/tests/: tests.sh
docker_servers/worker_node_control_server/: Dockerfile  main.py  requirements.txt
docker_servers/worker_node_control_server/tests/: tests.sh
docker_servers/yaml_files_for_k8s/: README.md  app-network.yaml  main-server-deployment.yaml  mongo-fastapi-server-deployment.yaml  mongo-pv.yaml  mongodb-deployment.yaml  sqlite-fastapi-server-deployment.yaml  sqlite-pv.yaml  worker-node-control-server-deployment.yaml
docs/: diagram (2).json
image/README/: Online Flowchart Diagram.json
qt/: CMakeLists.txt  calculation_matrix_form.cpp  calculation_matrix_form.h  calculation_matrix_form.ui  download_files_form.cpp  download_files_form.h  download_files_form.ui  loading.cpp  loading.h  login_form.cpp  login_form.h  login_form.ui  main.cpp  matrix_decomposition_results_window.cpp  matrix_decomposition_results_window.h  matrix_decomposition_results_window.ui  operation_selection_dialog.cpp  operation_selection_dialog.h  registration_form.cpp  registration_form.h  registration_form.ui
